apps/bulwark/ingress-external.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bulwark-external
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: infra-redirect-to-https@kubernetescrd
spec:
  rules:
    - host: webmail.progist.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bulwark
                port:
                  number: 3000
  tls:
    - hosts: [webmail.progist.ru]
      secretName: bulwark-external-tls
